GNU C Library NEWS -- history of user-visible changes.
Copyright (C) 1992-2020 Free Software Foundation, Inc.
See the end for copying conditions.

Please send GNU C library bug reports via <https://sourceware.org/bugzilla/>
using `glibc' in the "product" field.

Version 2.31.1

The following bugs are resolved with this release:
  [20543] Please move from .gnu.linkonce to comdat
  [25487] sinl() stack corruption from crafted input (CVE-2020-10029)
  [25523] MIPS/Linux inline syscall template is miscompiled
  [25623] test-sysvmsg, test-sysvsem, test-sysvshm fail with 2.31 on 32 bit and
    old kernel
  [25635] arm: Wrong sysdep order selection for soft-fp
  [25715] system() returns wrong errors when posix_spawn fails

Security related changes:

  CVE-2020-10029: Trigonometric functions on x86 targets suffered from stack
  corruption when they were passed a pseudo-zero argument.  Reported by Guido
  Vranken / ForAllSecure Mayhem.

  CVE-2020-1751: A defect in the PowerPC backtrace function could cause an
  out-of-bounds write when executed in a signal frame context.

  CVE-2020-1752: A use-after-free vulnerability in the glob function when
  expanding ~user has been fixed.


Version 2.31

Major new features:

* The GNU C Library now supports a feature test macro _ISOC2X_SOURCE to
  enable features from the draft ISO C2X standard.  Only some features from
  this draft standard are supported by the GNU C Library, and as the draft
  is under active development, the set of features enabled by this macro is
  liable to change.  Features from C2X are also enabled by _GNU_SOURCE, or
  by compiling with "gcc -std=gnu2x".

* The <math.h> functions that round their results to a narrower type now
  have corresponding type-generic macros in <tgmath.h>, as defined in TS
  18661-1:2014 and TS 18661-3:2015 as amended by the resolution of
  Clarification Request 13 to TS 18661-3.

* The function pthread_clockjoin_np has been added, enabling join with a